--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -48,8 +48,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-yarn-
     - run: yarn
-    - name: Download built packages
-      uses: actions/download-artifact@v2-preview
+    - uses: actions/download-artifact@v1 # TODO: Change to v2 when gzip is fixed
       with: { name: dist, path: ./packages/ }
     - run: yarn lint
     - run: cat ./packages/http/dist/types/index.d.ts
