fix(coolio): yarn audit command fix
* fix: ignore yarn audit failures with low severity (i.e. lodash with prototype pollution)

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -21,7 +21,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-yarn-
     - run: yarn
-    - run: yarn audit --groups dependencies
+    - run: yarn audit:ci
     - run: yarn compile
     - name: Upload built packages
       uses: actions/upload-artifact@v2-preview
